# substrate-node-template

./: .gitignore  Cargo.toml  Makefile
node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
